--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -179,13 +179,13 @@ footer {
 		text-align: center;
 		margin: 0:;
 	}
-	.images {
-/*		height: 50%;
-*/		width: 95%;
+/*	.images {
+		height: 50%;
+		width: 95%;
 		display: block;
 		margin: 0;
 		padding: 0;
-			}
+			}*/
 	#kbell,#janet {
 		display: none;
 	}
