--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -168,7 +168,7 @@ footer {
 
 @media only screen and (max-width: 480px) {
 	body {
-		font-size: 14px:;
+		font-size: 14px;
 	}
 	.column {
 		float: none;
@@ -177,7 +177,7 @@ footer {
 		nav a {
 		display: block;
 		text-align: center;
-		margin: 0:;
+		margin: 0;
 	}
 	.images {
 		width:	100px;
