--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -105,7 +105,7 @@ footer {
 }
 .column {
 	float: left;
-	width: : 25%;
+	width: 25%;
   	height: 25em;
 	padding: 1.5em 1.5em 0em 1.5em;
 	margin: 1em;
